--- a/Sass/contact.scss
+++ b/Sass/contact.scss
@@ -264,59 +264,66 @@ main {
       }
     }
   }
+
   .location-section {
-    position: relative;
+    width: 100%;
+    height: auto;
     background: url("/assets/img/patten-02.png") no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 500px;
-    padding-bottom: 120px;
-    display: flex;
-    align-items: start;
-    justify-content: center;
+    height: auto;
+    padding: 50px 0 110px;
     .location-container {
-      position: absolute;
-      margin-top: -180px;
       padding: 0 10px;
       margin-left: auto;
       margin-right: auto;
+      margin-top: -200px;
       max-width: 1200px;
       height: auto;
       text-align: center;
-
       .wrap__dess {
         box-shadow: 10px 0px 25px rgba(3, 3, 3, 0.2);
         background-color: var(--background_1);
         width: 100%;
+        height: 100%;
         display: flex;
-        align-items: start;
+        align-items: center;
         justify-content: space-between;
         overflow: hidden;
         border-radius: 10px;
         color: var(--colorText_1);
         .wrap__map {
           width: 50%;
+          height: 100%;
           .map {
             width: 100%;
           }
         }
         .wrap__desc {
-          padding: 61px 25px 40px 76px;
+          padding: 77px 18px 55px 101px;
           width: 50%;
+          height: 100%;
           .box__content {
+            width: 100%;
+            height: auto;
             h1 {
-              font-size: 30px;
+              width: 100%;
+              font-size: 40px;
               margin-bottom: 20px;
               text-align: start;
             }
           }
 
           .box__ress {
+            width: 100%;
+            height: auto;
             display: flex;
             flex-direction: column;
+            align-items: start;
             .item {
               width: 100%;
               display: flex;
+              align-items: center;
               h3 {
                 text-align: start;
                 width: 25%;
@@ -342,32 +349,31 @@ main {
                 }
               }
             }
-            .box__btn {
-              width: 150px;
-              margin-top: 35px;
-              display: flex;
-              align-items: center;
-              justify-content: end;
-              border-radius: 30px;
-              gap: 10px;
-              padding: 5px 5px 5px 30px;
-              background: var(--primaryColor);
-              color: #fff;
-              cursor: pointer;
-              .button__icon {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 15px;
-                height: 15px;
-                padding: 10px;
-                size: 10px;
-                background-color: #fff;
-                color: var(--primaryColor);
-                border-radius: 50%;
-              }
-            }
           }
+        }
+      }
+      .box__btn {
+        margin-top: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        border-radius: 30px;
+        gap: 10px;
+        padding: 5px 5px 5px 30px;
+        background: var(--primaryColor);
+        color: #fff;
+        cursor: pointer;
+        .button__icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 15px;
+          height: 15px;
+          padding: 10px;
+          size: 10px;
+          background-color: #fff;
+          color: var(--primaryColor);
+          border-radius: 50%;
         }
       }
     }
@@ -399,11 +405,6 @@ main {
             }
           }
         }
-      }
-    }
-    .location-section {
-      .location-container {
-        max-width: 960px;
       }
     }
   }
@@ -448,11 +449,35 @@ main {
     }
     .location-section {
       .location-container {
+        max-width: 824px;
+        margin-top: 0;
         .wrap__dess {
+          flex-wrap: wrap;
+          .wrap__map {
+            width: 100%;
+          }
           .wrap__desc {
+            width: 100%;
+            padding: 30px;
             .box__content {
               h1 {
+                margin-bottom: 30px;
                 font-size: 25px;
+              }
+            }
+            .box__ress {
+              .item + .item {
+                border-top: 1px solid #bbbbbb;
+              }
+              .item {
+                h3 {
+                  margin-bottom: 10px;
+                }
+                .content {
+                  p {
+                    margin-bottom: 10px;
+                  }
+                }
               }
             }
           }
@@ -499,43 +524,6 @@ main {
               width: 100%;
               object-fit: cover;
               height: 100%;
-            }
-          }
-        }
-      }
-    }
-    .location-section {
-      height: 825px;
-      .location-container {
-        max-width: 824px;
-        .wrap__dess {
-          flex-wrap: wrap;
-          .wrap__map {
-            width: 100%;
-          }
-          .wrap__desc {
-            width: 100%;
-            padding: 30px;
-            .box__content {
-              h1 {
-                margin-bottom: 30px;
-                font-size: 25px;
-              }
-            }
-            .box__ress {
-              .item + .item {
-                border-top: 1px solid #bbbbbb;
-              }
-              .item {
-                h3 {
-                  margin-bottom: 10px;
-                }
-                .content {
-                  p {
-                    margin-bottom: 10px;
-                  }
-                }
-              }
             }
           }
         }
