--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -608,6 +608,7 @@ main {
             justify-content: center;
           }
           .box__content {
+            margin-top: 30px;
             padding: 0;
             width: 100%;
           }
