--- a/Sass/method.scss
+++ b/Sass/method.scss
@@ -515,9 +515,9 @@ main {
         .slick-track {
           height: 100%;
           overflow-y: visible;
-          .item + .item {
-            margin-left: 30px;
-          }
+          display: flex;
+          justify-content: space-between;
+          gap: 30px;
           .item {
             position: relative;
             background: var(--background_1);
