--- a/css/method.css
+++ b/css/method.css
@@ -509,9 +509,9 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .i
 .teachingSkill-section .teachingSkill-container .box__carousel .slick-list .slick-track {
   height: 100%;
   overflow-y: visible;
-}
-.teachingSkill-section .teachingSkill-container .box__carousel .slick-list .slick-track .item + .item {
-  margin-left: 30px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
 .teachingSkill-section .teachingSkill-container .box__carousel .slick-list .slick-track .item {
   position: relative;
